--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,20 @@
             <a href="news.html">Aktualności</a>
             <a class="active" href="contact.html">Kontakt</a>
             <a href="about.html">Drużyna</a>
+	    <a href="download.html">Do pobrania</a>
+	    <a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
+            <p class="textbox">
+            Drużynowy Adam Miera:<br>
+            nr.tel. +48 530 397 391<br><br>
+            Przyboczna Aleksandra Sosna:<br>
+            nr.tel. #wpisać numer#<br><br>
+            Zastępowy Marek Bizoń:<br>
+            nr.tel. #wpisać numer#<br><br>
+            Redaktor strony Konrad Sowula<br>
+            E-mail: 22pdhcz@gmail.com
+            </p>
         </div>
     </body>
 </html>
