--- a/download.html
+++ b/download.html
@@ -15,11 +15,11 @@
             <img class="headimage" src="logo22_2.jpg">
         </div>
         <div class="nb">
-            <a class="active" href="index.html">Strona Główna</a>
+            <a href="index.html">Strona Główna</a>
             <a href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
             <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
+	    <a class="active" href="download.html">Do pobrania</a>
 	    <a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
