--- a/download_eo.html
+++ b/download_eo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
     <head>
-        <title>22 Próbna Drużyna Harcerska z Czernicy</title>
+        <title>22 Prova Harca Trupo de Ĉernico</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -15,12 +15,12 @@
             <img class="headimage" src="logo22_2.jpg">
         </div>
         <div class="nb">
-            <a class="active" href="index.html">Strona Główna</a>
-            <a href="news.html">Aktualności</a>
-            <a href="contact.html">Kontakt</a>
-            <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
-	    <a href="song.html">E-Śpiewnik</a>
+            <a href="eo.html">Ĉefa Paĝo</a>
+            <a href="news_eo.html">Novaĵoj</a>
+            <a href="contact_eo.html">Kontaktoj</a>
+            <a href="about_eo.html">Trupo</a>
+	    <a class="active" href="download_eo.html">Al prenado</a>
+	    <a href="song_eo.html">E-Kantilibro</a>
         </div>
         <div>
         </div>
