--- a/template.html
+++ b/template.html
@@ -19,9 +19,10 @@
             <a href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
             <a href="about.html">Drużyna</a>
+	    <a href="download.html">Do pobrania</a>
+	    <a href="song.html">E-Śpiewnik</a>
         </div>
-        <div class="content">
-            <p class="textbox"><br></p>
+        <div>
         </div>
     </body>
 </html>
