--- a/news.html
+++ b/news.html
@@ -19,6 +19,8 @@
             <a class="active" href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
             <a href="about.html">Drużyna</a>
+	    <a href="download.html">Do pobrania</a>
+	    <a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
         </div>
