--- a/template-eo.html
+++ b/template-eo.html
@@ -17,11 +17,12 @@
         <div class="nb">
             <a class="active" href="eo.html">Ĉefa Paĝo</a>
             <a href="news_eo.html">Novaĵoj</a>
-            <a href="contact_eo.html">Kontakto</a>
+            <a href="contact_eo.html">Kontaktoj</a>
             <a href="about_eo.html">Trupo</a>
+	    <a href="download_eo.html">Al prenado</a>
+	    <a href="song_eo.html">E-Kantilibro</a>
         </div>
-        <div class="content">
-            <p class="textbox"><br></p>
+        <div>
         </div>
     </body>
 </html>
