--- a/download_eo.html
+++ b/download_eo.html
@@ -16,11 +16,10 @@
         </div>
         <div class="nb">
             <a href="eo.html">Ĉefa Paĝo</a>
-            <a href="news_eo.html">Novaĵoj</a>
             <a href="contact_eo.html">Kontaktoj</a>
-            <a href="about_eo.html">Trupo</a>
-	    <a class="active" href="download_eo.html">Al prenado</a>
-	    <a href="song_eo.html">E-Kantilibro</a>
+			<a class="active" href="download_eo.html">Al prenado</a>
+			<a href="shouts_eo.html">Krioj</a>
+			<a href="song_eo.html">E-Kantilibro</a>
         </div>
         <div>
         </div>
