--- a/song.html
+++ b/song.html
@@ -16,13 +16,14 @@
         </div>
         <div class="nb">
             <a href="index.html">Strona Główna</a>
-            <a href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
-            <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
-	    <a class="active" href="song.html">E-Śpiewnik</a>
+			<a href="shouts.html">Okrzyki</a>
+			<a class="active" href="song.html">E-Śpiewnik</a>
         </div>
         <div>
+			<p class="textbox">
+				Strona w budowie!
+			</p>
         </div>
     </body>
 </html>
