--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,8 @@
         </div>
         <div class="nb">
             <a href="index.html">Strona Główna</a>
-            <a href="news.html">Aktualności</a>
             <a class="active" href="contact.html">Kontakt</a>
-            <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
+			<a href="shouts.html">Okrzyki</a>
 	    <a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
