--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         </div>
         <div class="nb">
             <a class="active" href="index.html">Strona Główna</a>
-            <a href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
-            <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
-	    <a href="song.html">E-Śpiewnik</a>
+			<a href="shouts.html">Okrzyki</a>
+			<a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
+			<p class="textbox">
+				Czuwaj!<br>
+				Znalazłeś się właśnie w bazie okrzyków i pieśni <i>22 Próbnej Drużyny Harcerskiej z Czernicy.</i><br><br>
+				Rozgość się, porozglądaj,<br>
+				Miłego przeglądania życzy Filozof, Filantrop i Poliglota ;)
         </div>
     </body>
 </html>
