--- a/template.html
+++ b/template.html
@@ -16,11 +16,9 @@
         </div>
         <div class="nb">
             <a class="active" href="index.html">Strona Główna</a>
-            <a href="news.html">Aktualności</a>
             <a href="contact.html">Kontakt</a>
-            <a href="about.html">Drużyna</a>
-	    <a href="download.html">Do pobrania</a>
-	    <a href="song.html">E-Śpiewnik</a>
+			<a href="shouts.html">Okrzyki</a>
+			<a href="song.html">E-Śpiewnik</a>
         </div>
         <div>
         </div>
