--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,11 @@
             Drużynowy Adam Miera:<br>
             nr.tel. +48 530 397 391<br><br>
             Przyboczna Aleksandra Sosna:<br>
-            nr.tel. #wpisać numer#<br><br>
+            nr.tel. 792430868<br><br>
             Zastępowy Marek Bizoń:<br>
-            nr.tel. #wpisać numer#<br><br>
+            nr.tel. 516098604<br><br>
+	    Zastępowa Weronika Wieczorek
+	    nr.tel. 601269094<br><br>
             Redaktor strony Konrad Sowula<br>
             E-mail: 22pdhcz@gmail.com
             </p>
