--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             nr.tel. 792430868<br><br>
             Zastępowy Marek Bizoń:<br>
             nr.tel. 516098604<br><br>
-	    Zastępowa Weronika Wieczorek
+	    Zastępowa Weronika Wieczorek<br>
 	    nr.tel. 601269094<br><br>
             Redaktor strony Konrad Sowula<br>
             E-mail: 22pdhcz@gmail.com
